# ML_OPS_2023

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  infer.py  pyproject.toml  savetoonnx.py  setup.cfg  train.py
.dvc/: config
conf/: config.py  config.yaml
data/: .gitignore.dvc  iris_model.joblib  iris_model.pkl  iris_model.pkl.dvc  out.csv  test.csv.dvc  train.csv.dvc
iris/: iris_classifier.py
my_package/: load_data.py  train_iris.py
my_project/: infer.py  main.py  pyproject.toml
my_project/data/: iris_model.joblib  test_data.csv
my_project/my_package/: load_data.py  train_iris.py
triton/: Dockerfile  docker-compose.yaml
triton/model_repository/argmax-model/: config.pbtxt
triton/model_repository/argmax-model/1/: model.py
triton/model_repository/ensemble-onnx/: config.pbtxt
triton/model_repository/onnx-model/: config.pbtxt
triton/model_repository/onnx-model/1/: model.onnx
