[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["Niyaz Bureev <bureev.na@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
