[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Niyaz Bureev <bureev.na@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
scikit-learn = ">=1.3.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
